src/objects/forseva1__DnBDecisionSupport__c.object
<CustomObject>
    <fields>
        <fullName>AutoIncreaseCount3months__c</fullName>
        <label>AutoIncreaseCount3months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_History_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment History Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Risk_Grade__c</fullName>
        <label>Previous Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Grade_Criteria__c</fullName>
        <label>Risk Grade Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PASS</fullName>
                </value>
                <value>
                    <fullName>FAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Grade__c</fullName>
        <label>Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 - Low</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - High</fullName>
                </value>
                <value>
                    <fullName>5 - Very High</fullName>
                </value>
                <value>
                    <fullName>0 - No hit</fullName>
                </value>
                <value>
                    <fullName>1 - Very Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>